# agentifui-pro

./: .editorconfig  .envrc  .gitignore  AGENTS.md  AUTHORS  CLAUDE.md  CONTRIBUTING.md  LICENCE  README.md  package.json
.claude/: settings.json.example
.github/: CODEOWNERS  CODE_OF_CONDUCT  dependabot.yml  pull_request_template.md
.specify/: README.md
api/: .env.example  .ruff.toml  README.md  SECURITY.md  agentifui_pro.db  alembic.ini  main.py  pyproject.toml  pytest.ini
api/alembic/: env.py
api/alembic/versions/: 3b7783cad1b1_initial_migration_with_base_models.py
api/app/: main.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: health.py  info.py
api/app/core/config/: database.py  settings.py
api/app/core/exceptions/: handlers.py
api/app/core/middleware/: __init__.py  security.py
api/app/db/: session.py
api/app/db/models/: base.py
api/app/schemas/: health.py  info.py
api/app/scripts/: dev.py
api/config/: __init__.py  logging.py  settings.py
api/configs/: __init__.py  database.py  endpoints.py  logging.py  parsing.py  security.py  settings.py  validation.py
api/database/: __init__.py  connection.py  health.py  session.py
api/health/: __init__.py  endpoints.py  models.py
api/middleware/: __init__.py  error_handler.py
api/migrations/: env.py
api/migrations/versions/: 0e1b73d98cb3_add_tenant_column_comments.py  3c2b8f88b1a5_add_multi_tenant_foundation.py  9814f556d003_initial_setup_postgresql_18_with_uuidv7_.py
api/models/: __init__.py  base.py  errors.py
api/src/: main.py
api/src/api/: deps.py
api/src/api/endpoints/: branding.py  health.py
api/src/config/: settings.py
api/src/core/: __init__.py  config.py  context.py  db.py  exceptions.py  redis.py  router.py  version.py
api/src/database/: __init__.py  connection.py  health.py  session.py
api/src/health/: __init__.py  endpoints.py  models.py
api/src/middleware/: __init__.py  error_handler.py  tenant_context.py
api/src/models/: __init__.py  base.py  errors.py  tenant.py
api/src/schemas/: __init__.py  branding.py  health.py
api/tests/: conftest.py  test_config_validation.py  test_cors_parsing.py  test_database_connection.py  test_error_schemas.py  test_health_db_endpoint.py  test_health_endpoint.py  test_health_redis_endpoint.py  test_performance.py  test_quickstart_validation.py  test_request_context.py  test_startup.py  test_tenant_enforcement.py  test_tenant_role_integration.py  test_type_checking.py
api/tests/configs/: test_database_config.py  test_env_parsing.py  test_environment_settings.py  test_security_validation.py
api/tests/contract/: test_config_validate.py  test_database_status.py  test_database_test.py  test_health.py  test_health_db_enhanced.py  test_health_ready.py  test_info.py
api/tests/coze/: README.md  conftest.py  test_chat_client.py  test_coze_bot.py  test_coze_chat.py  test_coze_client.py  test_coze_workflow.py
api/tests/database/: test_connection_manager.py
api/tests/dify/: README.md  conftest.py  test_chat_client.py  test_completion_client.py  test_dify_client.py  test_knowledge_base_client.py  test_workflow_client.py  test_workspace_client.py
api/tests/integration/: test_backward_compatibility.py  test_branding_endpoint_integration.py  test_config_error_handling.py  test_database.py  test_database_connection.py  test_environment_transition.py  test_health_endpoint.py  test_health_redis_endpoint.py  test_quickstart_validation.py  test_startup.py  test_tenant_context_middleware.py  test_tenant_role_integration.py  test_type_checking.py
api/tests/unit/: test_branding_endpoint.py  test_config_validation.py  test_cors_parsing.py  test_db_behaviors.py  test_db_engine_config.py  test_env_examples.py  test_error_handler.py  test_error_schemas.py  test_health_endpoints.py  test_migration_engine_timezone.py  test_migration_status_logic.py  test_router.py  test_tenant_guardrails.py  test_tenant_member_dependencies.py  test_version_resolution.py
api/tests/unit_tests/: test_redis_client.py
web/: .gitignore  (+16 more)
(+262 files in other folders)
