[project]
name = "agentifui-pro-api"
version = "0.1.0"
description = "Agentifui Pro API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "greenlet>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "psutil>=7.1.0",
    "mypy>=1.18.2",
    "types-psutil>=0.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
# Python version
python_version = "3.12"

# Strictness
strict = true

# Plugins
plugins = ["pydantic.mypy"]

# Source paths
mypy_path = "src"
packages = ["src", "tests"]

# Exclusions
exclude = [
    "^migrations/",
    "^\\.venv/",
]

# Error reporting
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
show_error_code_links = true
pretty = true
color_output = true
error_summary = true

# Caching
incremental = true
cache_dir = ".mypy_cache"

# Module overrides
[[tool.mypy.overrides]]
module = "migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
